fixed line spacing and favicon

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ h1 {
 p {
     font-size: 12pt;
     font-weight: 700;
+    line-height: 140%;
 }
 
 a {
